// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a Button with small size 1`] = `
.emotion-0 {
  border: 0;
  padding: 0;
  background: none;
  cursor: pointer;
  font-size: inherit;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  color: inherit;
  font-family: IBM Plex Sans,Lucida Grande,Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.57;
  font-weight: bold;
  display: inline-block;
  border-radius: 2px;
  height: 24px;
  padding-left: 0.769em;
  padding-right: 0.769em;
  -webkit-transition: padding 0.2s ease-in-out,background 0.2s ease-in-out;
  transition: padding 0.2s ease-in-out,background 0.2s ease-in-out;
  color: #121212;
  border: 1px solid transparent;
  background-color: #1ED7D1;
}

.emotion-0:hover,
.emotion-0[data-state*='hover'] {
  background-color: hsl(178.10000000000002,75.5%,43.2%);
}

.emotion-0:active,
.emotion-0[data-state*='active'] {
  background-color: hsl(178.10000000000002,75.5%,38.4%);
}

.emotion-0:focus:not(:focus-visible) {
  outline: 0;
}

.emotion-0:focus-visible,
.emotion-0[data-state*='focus'] {
  outline: 0;
  box-shadow: 0 0 0 0.5px #FFFFFF,0 0 2px 2px #1ED7D1;
}

.emotion-0 .e1t5eso00 {
  display: block;
  line-height: 1;
  font-size: 1.42em;
  margin-left: -6px;
  margin-right: -6px;
  margin-top: 5px;
  margin-bottom: 5px;
  font-size: 1em;
}

<Button
  importance="primary"
  size="small"
>
  <button
    className="emotion-0 emotion-1"
  >
    Hello, World!
  </button>
</Button>
`;

exports[`renders a disabled and transparent Button 1`] = `
.emotion-0 {
  border: 0;
  padding: 0;
  background: none;
  cursor: pointer;
  font-size: inherit;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  color: inherit;
  font-family: IBM Plex Sans,Lucida Grande,Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.57;
  font-weight: bold;
  display: inline-block;
  border-radius: 2px;
  height: 32px;
  padding-left: 0.769em;
  padding-right: 0.769em;
  -webkit-transition: padding 0.2s ease-in-out,background 0.2s ease-in-out;
  transition: padding 0.2s ease-in-out,background 0.2s ease-in-out;
  color: #121212;
  border: 1px solid transparent;
  background-color: #1ED7D1;
  cursor: default;
  background-color: transparent;
}

.emotion-0:hover,
.emotion-0[data-state*='hover'] {
  background-color: hsl(178.10000000000002,75.5%,43.2%);
}

.emotion-0:active,
.emotion-0[data-state*='active'] {
  background-color: hsl(178.10000000000002,75.5%,38.4%);
}

.emotion-0:focus:not(:focus-visible) {
  outline: 0;
}

.emotion-0:focus-visible,
.emotion-0[data-state*='focus'] {
  outline: 0;
  box-shadow: 0 0 0 0.5px #FFFFFF,0 0 2px 2px #1ED7D1;
}

.emotion-0,
.emotion-0:hover,
.emotion-0:focus,
.emotion-0:active {
  opacity: 0.4;
}

.emotion-0 .e1t5eso00 {
  display: block;
  line-height: 1;
  font-size: 1.42em;
  margin-left: -6px;
  margin-right: -6px;
  margin-top: 5px;
  margin-bottom: 5px;
}

<Button
  disabled={true}
  importance="primary"
  size="regular"
  transparent={true}
>
  <button
    className="emotion-0 emotion-1"
    disabled={true}
  >
    Hello, World!
  </button>
</Button>
`;

exports[`renders the expected markup 1`] = `
.emotion-0 {
  border: 0;
  padding: 0;
  background: none;
  cursor: pointer;
  font-size: inherit;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  color: inherit;
  font-family: IBM Plex Sans,Lucida Grande,Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.57;
  font-weight: bold;
  display: inline-block;
  border-radius: 2px;
  height: 32px;
  padding-left: 0.769em;
  padding-right: 0.769em;
  -webkit-transition: padding 0.2s ease-in-out,background 0.2s ease-in-out;
  transition: padding 0.2s ease-in-out,background 0.2s ease-in-out;
  color: #121212;
  border: 1px solid transparent;
  background-color: #1ED7D1;
}

.emotion-0:hover,
.emotion-0[data-state*='hover'] {
  background-color: hsl(178.10000000000002,75.5%,43.2%);
}

.emotion-0:active,
.emotion-0[data-state*='active'] {
  background-color: hsl(178.10000000000002,75.5%,38.4%);
}

.emotion-0:focus:not(:focus-visible) {
  outline: 0;
}

.emotion-0:focus-visible,
.emotion-0[data-state*='focus'] {
  outline: 0;
  box-shadow: 0 0 0 0.5px #FFFFFF,0 0 2px 2px #1ED7D1;
}

.emotion-0 .e1t5eso00 {
  display: block;
  line-height: 1;
  font-size: 1.42em;
  margin-left: -6px;
  margin-right: -6px;
  margin-top: 5px;
  margin-bottom: 5px;
}

<Button
  data-action="foo"
  importance="primary"
  size="regular"
>
  <button
    className="emotion-0 emotion-1"
    data-action="foo"
  >
    Hello, World!
  </button>
</Button>
`;
